no time for milestones

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,6 +50,12 @@
       <form action="http://localhost:5000/api/insert/insertin" method="Get">
         <button>Submit</button>
       </form>
+      <form action="http://localhost:5000/api/carpool/getride" method="GET">
+        <button>Wish to have a CarPool</button>
+      </form>
+      <form action="http://localhost:5000/api/payment/paypage" method="GET">
+        <button>Pay</button>
+      </form>
     </div>
 
     <script>
